# GameTestRust

./: Cargo.toml
.github/workflows/: publish.yml
src/: camera_controller.rs  main.rs  performance_overlay.rs
src/camera/: controller.rs  mod.rs  plugin.rs  setup.rs
src/game/: config.rs  events.rs  mod.rs  plugin.rs  settings.rs  settings_config.rs  state.rs
src/generation/: mod.rs  noise.rs  plugin.rs  world_generator.rs
src/hex/: coordinates.rs  hex.rs  hex_type.rs  map.rs  mod.rs  utils.rs
src/rendering/: batched_hex_renderer.rs  batched_triangle_strip_renderer.rs  chunk_manager.rs  chunk_renderer.rs  full_mesh_renderer.rs  hex_renderer.rs  materials.rs  mesh_builder.rs  mod.rs  plugin.rs
src/ui/: mod.rs  plugin.rs
src/ui/main_menu/: main_menu.rs
src/ui/performance_overlay/: mod.rs  performance_overlay.rs
