[package]
name = "GameTestRust"
version = "0.1.3"
edition = "2024"

[dependencies]
bevy = "0.18.0"
noise = "0.9.0"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }


[profile.dev]
# Keep fast compilation times during development.
opt-level = 0          # No optimizations – fastest compile times.
debug = true           # Full debug info (default, but explicit).
# Bevy often uses many dependencies; enabling optimizations for them can speed up runtime.
[profile.dev.package."*"]
opt-level = 3          # Optimize all dependencies heavily (slower to compile, but better runtime for dev).

[profile.release]
# Optimize for runtime performance.
opt-level = 3          # Maximum optimizations (default).
lto = "fat"            # Full link-time optimization – better performance than "thin", but slower compile.
codegen-units = 1      # One codegen unit maximizes optimization opportunities.
panic = "abort"        # Abort on panic – reduces binary size and can improve performance.
strip = "symbols"
overflow-checks = false  # Disable integer overflow checks – improves performance but risky; keep true for safety.

[profile.wasm-release]
# Optimize for small binary size and fast load times.
inherits = "release"
opt-level = "z"        # Optimize for size (even more aggressive than "s").
lto = "fat"            # Full LTO – significant size reduction.
strip = "debuginfo"    # Remove debug symbols.
panic = "abort"        # Abort on panic – essential for WASM to reduce size.